--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /.idea/
 /cmake-build-debug/
 /localtest/InnerData/
+
+code
+Makefile
+cmake_install.cmake
+CMakeCache.txt
+libantlr4-cpp-runtime.a
+python_interpreter
