--- a/test.in
+++ b/test.in
@@ -1,10 +1,11 @@
 i = 12.0
-j = 4
+j = -5
 print(i)
 print(j)
 print(i+j)
 print(i-j)
 print(i*j)
+print(i//j)
 print(i/j)
-a = -5
-print(a)
+i //= j
+print(i)
